--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contactanos</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="#about">INICIO</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -88,7 +88,7 @@
           <h1>Brindamos las mejores soluciones para tu negocio</h1>
           <h2>Todos los días aparecen nuevas tendencias logísticas y soluciones innovadoras para el área de logística. ¿Y esto por qué sucede? Es un hecho que se trata de una consecuencia de la revolución digital y, claramente, el área de logística puede beneficiarse y sacarle el máximo provecho a las nuevas herramientas y tecnologías digitales. </h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+            <a href="#about" class="btn-get-started scrollto">INICIO</a>
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Ver Video</span></a>
           </div>
         </div>
