--- a/index.html
+++ b/index.html
@@ -678,22 +678,23 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Ubicacion:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>CALLE BASILIO LOPEZ MZ H LT.52. URB. COSTA MAR</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>jparedes@corplmj.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Telefono:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+51 943 718 481</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3903.183297769678!2d-77.1315393771392!3d-11.961807820427989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105cd8c9be4a3bf%3A0x2b3a2e4d1e9eb9f9!2sAuxiliar%20PE-20D%2C%20Callao%2007046!5e0!3m2!1ses-419!2spe!4v1663033203434!5m2!1ses-419!2spe" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3903.183297769678!2d-77.1315393771392!3d-11.961807820427989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105cd8c9be4a3bf%3A0x2b3a2e4d1e9eb9f9!2sAuxiliar%20PE-20D%2C%20Callao%2007046!5e0!3m2!1ses-419!2spe!4v1663033203434!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
             </div>
 
           </div>
@@ -741,8 +742,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>Subscribite a Nuestro Boletin</h4>
+            <p>Ingresa tu email para acerte llegar nuestra informacion</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -756,40 +757,40 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Arsha</h3>
+            <h3>Corp. LMJ SAC</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              RUC 20557615157 <br>
+              CALLE BASILIO LOPEZ MZ H LT.52. URB. COSTA MAR <br>
+              Fundo Oquendo - CALLAO <br><br>
+              <strong>Phone:</strong> +51 943 718 481<br>
+              <strong>Email:</strong> jparedes@corplmj.com<br>
             </p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Quines Somos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Servicios</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Portafolio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Equipo</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Nuestros Servicios</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Almacenaje y Distribucion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Inventarios</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Picking y Packing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Digitalizacion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Gestion Documentaria</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Social Networks</h4>
+            <h4>Nuestras Redes Sociales</h4>
             <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
