--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-        Designed by <a href="https://bootstrapmade.com/">Luis TG</a>
+        Diseñado por <a href="https://bootstrapmade.com/">Luis TG</a>
       </div>
     </div>
   </footer><!-- End Footer -->
