--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
-      <img src="assets/img/lmj.jpg" class="img-fluid img-thumbnail" width="280" height="280">
+      <img src="assets/img/lmj.jpg" class="img-fluid img-thumbnail" width="230" height="230">
       <!-- <h1 class="logo me-auto"><a href="index.html">CORPORACION LMJ SAC</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -744,7 +744,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <h4>Subscribite a Nuestro Boletin</h4>
+            <h4>Subscribete a Nuestro Boletin</h4>
             <p>Ingresa tu email para acerte llegar nuestra informacion</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
