--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Brindamos las mejores soluciones para tu negocio</h1>
-          <h2>Todos los días aparecen nuevas tendencias logísticas y soluciones innovadoras para el área de logística. ¿Y esto por qué sucede? Es un hecho que se trata de una consecuencia de la revolución digital y, claramente, el área de logística puede beneficiarse y sacarle el máximo provecho a las nuevas herramientas y tecnologías digitales. </h2>
+          <h2>Todos los días aparecen nuevas tendencias logísticas y soluciones innovadoras para el área de logística. Es un hecho que se trata de una consecuencia de la revolución digital y, claramente, el área de logística puede beneficiarse y sacarle el máximo provecho a las nuevas herramientas y tecnologías digitales. </h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">INICIO</a>
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Ver Video</span></a>
