--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <h2>Todos los días aparecen nuevas tendencias logísticas y soluciones innovadoras para el área de logística. Es un hecho que se trata de una consecuencia de la revolución digital y, claramente, el área de logística puede beneficiarse y sacarle el máximo provecho a las nuevas herramientas y tecnologías digitales. </h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">INICIO</a>
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Ver Video</span></a>
+            <a href="https://www.youtube.com/watch?v=J28hOklQDLk" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Ver Video</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
