--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Brindamos las mejores soluciones para tu negocio</h1>
-          <h2>Todos los días aparecen nuevas tendencias logísticas y soluciones innovadoras para el área de logística. Es un hecho que se trata de una consecuencia de la revolución digital y, claramente, el área de logística puede beneficiarse y sacarle el máximo provecho a las nuevas herramientas y tecnologías digitales. </h2>
+          <h2>A diario aparecen nuevas tendencias y soluciones innovadoras para el área de logística. Se trata de una consecuencia de la revolución digital y, claramente, el área de logística puede beneficiarse y sacarle el máximo provecho a las nuevas herramientas y tecnologías digitales. </h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">INICIO</a>
             <a href="https://www.youtube.com/watch?v=J28hOklQDLk" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Ver Video</span></a>
@@ -147,20 +147,17 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Especialistas en Soluciones de logisticas, los cuales nos avalan para brindar un servicio optimo de acuerdo a las necesidades del negocio. Nos especializamos en servicio ON SITE, colaboradores altamente capacitados y especializados para atender los requerimientos que sean necesarios.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> Implementamos soluciones de logistica de forma integral</li>
+              <li><i class="ri-check-double-line"></i> Desarrollamos planes de trabajo para poder cumplir metas en desarrollo de nuestros proyectos.</li>
+              <li><i class="ri-check-double-line"></i> Ademas de dar asesoria de mejoras continuas para los diferentes procesos que se implementan .</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+              Estamos en la busqueda de identificar los costos operativos en la actividad para luego mejorar la eficiencia en la cadena de logistica.
             </p>
             <a href="#" class="btn-learn-more">Saber mas</a>
           </div>
