--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Estamos en la busqueda de identificar los costos operativos en la actividad para luego mejorar la eficiencia en la cadena de logistica.
+              Estamos en constante busqueda de identificar los costos operativos en la actividad para luego mejorar la eficiencia en la cadena de logistica.
             </p>
             <a href="#" class="btn-learn-more">Saber mas</a>
           </div>
@@ -195,17 +195,17 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"><span>02</span> Vision<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Ser la asociación líder y referente en el ámbito logístico dentro de la cadena de suministro, haciendo empresas más competitivas y promoviendo a Perú como una plataforma logística de primer mundo.
+                      Ser la Corporacion líder y referente en el ámbito logístico dentro de la cadena de suministro, haciendo empresas más competitivas y promoviendo a Perú como una plataforma logística de primer mundo.
  
                     </p>
                   </div>
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> Objetivos<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> Objetivo Principal<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                      Crear conciencia sobre la importancia de la logística dentro de cadena de suministro para el desarrollo de Perú y de las empresas, en una economía global.
                     </p>
                   </div>
                 </li>
@@ -232,8 +232,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>Valores definidos en la empresa</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Es nuestra tarjeta de presentacion, actúa al mismo tiempo como brújula para definir objetivos y concretar procedimientos; y como sello de calidad para los clientes
             </p>
 
             <div class="skills-content">
