--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
         <div class="section-title">
           <h2>Servicios</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Ofrecemos desde Almacenaje, Inventarios y Gestion Documental con el proceso más completo en cada unos de nuestros servicios a cualquier lugar del país. Nuestra meta es la completa satisfacción en cada servicio que se solicita, el cual abrirán nuevas oportunidades de negocio y fortalecimiento de nuestros Lazos Comerciales entre las empresas.</p>
         </div>
 
         <div class="row">
@@ -327,7 +327,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
             <h3>LLamanos</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p> Puedes contactarnos a traves de nuestra redes sociales, asi tambien Whatsapp y Telefono +51 943 718 481; email:  jparedes@corplmj.com</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
@@ -343,7 +343,7 @@
 
         <div class="section-title">
           <h2>Portafolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Nuestro Personal desempeñandose en los distintos clientes, en los cuales mostramos compromiso y seriedad en cada uno de los procesos, siendo profesionales en la labor que desempeñamos.</p>
         </div>
 
         <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
@@ -456,7 +456,7 @@
 
         <div class="section-title">
           <h2>Equipo de Trabajo</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Presentamos el equipo que lidera en cada unos de los procesos que desempeñamos</p>
         </div>
 
         <div class="row">
@@ -466,7 +466,7 @@
               <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Jhonston Paredes</h4>
-                <span>Chief Executive Officer</span>
+                <span>Gerente de General</span>
                 <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
@@ -483,7 +483,7 @@
               <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Diego Vasquez</h4>
-                <span>Product Manager</span>
+                <span>Gerente de Operaciones</span>
                 <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
@@ -500,7 +500,7 @@
               <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Luis Torres G</h4>
-                <span>CTO</span>
+                <span>Jefe de TI</span>
                 <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
