--- a/index.html
+++ b/index.html
@@ -601,52 +601,52 @@
 
         <div class="section-title">
           <h2>Preguntas Frecuentes</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>En un mercado saturado, es esencial obtener una ventaja competitiva. Para maximizar el potencial de los clientes que repiten y mantienen un resultado final saludable, los proveedores necesitan crear una experiencia positiva para el cliente con un proceso de pedido fluido de principio a fin.</p>
         </div>
 
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">¿Tienes experiencia trabajando con empresas de logistica similares a la mía? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  Es importante asegurarse de que el proveedor de servicios logísticos previsto pueda gestionar, cumplir e informar fácilmente sobre su tipo de pedidos. Querrá comprobar que puede gestionar flujos irregulares de inventario sin problemas y de forma eficiente, y que puede manejar el aumento de la demanda a medida que usted crece.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">¿Tiene limitaciones de capacidad?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                  Entender las metodologías y los flujos de trabajo operativos de un proveedor de logística puede proporcionar una idea de cómo van a satisfacer sus necesidades. Un socio de cumplimiento fiable tendrá un sólido sistema de gestión de almacenes (WMS). Esto establece los procedimientos y procesos dentro de su organización de almacén para maximizar su flujo de trabajo y la precisión operativa. Un sistema de gestión de almacenes bien estructurado debe ser capaz de manejar fácilmente las demandas fluctuantes de su negocio de comercio electrónico..
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">¿Con qué integraciones trabaja? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                  Su socio de cumplimiento subcontratado debe ser capaz de trabajar con el software y los mercados con los que desea trabajar, querrá saber que el proveedor de logística puede gestionar eficazmente sus necesidades de cumplimiento.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">¿Obtendremos datos de inventario en tiempo real? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
+                  Un proveedor logístico óptimo puede ofrecer una gestión del inventario en tiempo real y alertas inmediatas sobre la disminución de las existencias, independientemente del canal de venta. Intente comprender de antemano cuál es su procedimiento cuando se alcanzan los niveles mínimos de existencias. También querrá saber si sus sistemas de gestión de inventario pueden actualizar los carros de la compra de los clientes con los niveles reales de existencias en tiempo real. Esto le ayudará a hacer una mejor previsión, a satisfacer las demandas y a conseguir clientes satisfechos.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="500">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">¿Qué sistemas o procesos tienen en marcha para garantizar la exactitud del cumplimiento de los pedidos? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
+                  El cliente, su marca y su cuenta de resultados se ven afectados cuando se envían pedidos incorrectos. Un proveedor logístico con escáneres de códigos de barras en varias fases del proceso puede reducir la posibilidad de error. Un socio fiable para la ejecución de pedidos externos debe tener controles de gestión estrictos y un seguimiento eficaz del almacén, lo que facilita un mejor inventario y la precisión de los pedidos..
                 </p>
               </div>
             </li>
