--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 
         <div class="section-title">
           <h2>Preguntas Frecuentes</h2>
-          <p>En un mercado saturado, es esencial obtener una ventaja competitiva. Para maximizar el potencial de los clientes que repiten y mantienen un resultado final saludable, los proveedores necesitan crear una experiencia positiva para el cliente con un proceso de pedido fluido de principio a fin.</p>
+          <p>En un mercado amplio, es esencial obtener una ventaja competitiva. Para maximizar el potencial de los clientes que repiten y mantienen un resultado final saludable, los proveedores necesitan crear una experiencia positiva para el cliente con un proceso de pedido fluido de principio a fin.</p>
         </div>
 
         <div class="faq-list">
