--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 
         <div class="section-title">
           <h2>Contactanos</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Para mayor informacion aqui detallamos nuestra ubicacion y dejanos alguna consulta que quisieras hacernos llegar.</p>
         </div>
 
         <div class="row">
